# rust-agi-os

./: Cargo.toml  README.md  compilation_errors.txt  compilation_errors_updated.txt  current_compilation_errors.txt  delivery_guide.md  gui_development_progress.md  gui_framework_evaluation.md  language.rs  lib.rs  lifecycle.rs  memory_tests.md  meta_reasoning_tests.md  qemu_start.sh  reflection.rs  resource.rs  sandbox_test_additions.rs  sandbox_tests.md  start_agi_os.sh  system.json  system_fixes.md  test_coverage_analysis.md  test_results.md  testing_validation_plan.md  threat_detection.rs  todo.md  verification.rs  代码结构.md
.trae/rules/: project_rules.md
crates/agi-core/: Cargo.toml
crates/agi-interaction/: Cargo.toml
crates/agi-neural/: Cargo.toml
crates/agi-security/: Cargo.toml
crates/agi-symbolic/: Cargo.toml  symbolic.rs
docs/: developer_guide.md  user_manual.md
docs/development/: fix_log.md
src/: lib.rs  main.rs
src/agi-interaction/: Cargo.toml
src/agi-security/: Cargo.toml
src/agi-security/src/: lib.rs
src/core/: Cargo.toml  config.rs  context.rs  integration.rs  lifecycle.rs  mod.rs
src/gui/: applications.rs  deployment.rs  desktop.rs  feedback.rs  high_dpi.rs  high_resolution_window.rs  iced_window_system.rs  input.rs  input_method.rs  keyboard_input.rs  keyboard_integration.rs  main.rs  mod.rs  mouse_input.rs  mouse_integration.rs  render.rs  testing.rs  theme.rs  vm_validation.rs  widgets.rs  window.rs  window_manager.rs  window_system.rs
src/interaction/: context.rs  interface.rs  language.rs  mod.rs  multimodal.rs  natural_language.rs  natural_language_processor.rs  speech.rs  vision.rs
src/kernel/: memory.rs  mod.rs  process.rs  process_test.rs  sandbox.rs
src/meta_reasoning/: adaptation.rs  mod.rs  planning.rs  planning_test.rs  reasoning.rs  reasoning_test.rs
src/reflection/: mod.rs  (+3 more)
(+64 files in other folders)
